--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_form_builder: ^7.8.0
+  flutter_form_builder:
+    git:
+      url: https://github.com/maxhuk/flutter_form_builder.git
   flutter_colorpicker: ^1.0.3
   dropdown_search: ^5.0.5
   signature: ^5.3.2
